...
    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
    <string name="sp_error_url_not_valid">URL is not valid.</string>


    <!-- Repository Activity -->
    <string name="r_browser_nothing_to_display">There are no resources in this folder.</string>
    <string name="r_search_nothing_to_display">No results from search.</string>
    <!--Options Menu -->
    <string name="r_om_refresh">Refresh</string>
    <!-- Context Menu -->
    <string name="r_cm_open">Open</string>
    <string name="r_cm_run">Run</string>
    <string name="r_cm_edit">Edit</string>
...
